love love love love

--- a/_posts/2024-05-30-chiara-2024.markdown
+++ b/_posts/2024-05-30-chiara-2024.markdown
@@ -36,6 +36,11 @@ Finley also wanted to wish you a happy birthday.  He just turned seven years old
 ![](https://lh3.googleusercontent.com/pw/AP1GczNT0yorxUr0JicqNyScEX56Ij_aR4gGSVXABoFTWpVMrtMokSV25LtUNss8G88dao-ZULmbZe5C5dt_c4Hoz3OU4tperFDNknUeOrz4Ncd_PcdEFnOHOs0-N1gOjra1z1qWucV1CbjYpUqRB9ecSL3dog=w732-h968-s-no-gm?authuser=0)
 
 
+
+# Love Love Love Love Love
+
+Aunt Tracey and I love you and wish you a whole year of happiness and joy.  There is noone like you in the entire world and that is pretty darn special.
+
 ## Behind the scenes.
 
 A super exlusive sneak preview of my creative process.
