--- a/_posts/2024-06-24-caleb-2024.md
+++ b/_posts/2024-06-24-caleb-2024.md
@@ -1,11 +1,13 @@
 ---
 layout: default
-title:  "Happy Birthday, Caleb"
+title:  "Happy 9th Birthday, Caleb"
 date:   2024-06-24 22:47:00 -0700
 categories: caleb birthday
 ---
 
-# A picture to Look at
+# Happy 9th Birthday!
+
+## A picture to Look at
 
 
 
@@ -15,13 +17,13 @@ categories: caleb birthday
 
 ## Some Words to Read
 
-Dear Caleb, I'm wishing you the most happiest of birthdays from over here in California.  I hope you have a really fun day filled ith lots of smiles and laughs.  Tell your mom, dad, and siblings (and maybe grandparents) that I said they have to make a silly face for you.  Here's mine:
+Dear Caleb, I'm wishing you the most happiest of birthdays from over here in California.  I hope you have a really fun day filled with lots of smiles and laughs.  Tell your mom, dad, and siblings (and maybe grandparents) that I said they have to make a silly face for you.  Here's mine:
 
 ![](https://lh3.googleusercontent.com/pw/AP1GczOx0ImbhWh5TZY9GcZaQikXic_TtP-dXdo86nFnUGW-SKfB81tC_hNEB1A0ovAtCLzvS_3xGmzAeKzIxIBX8XvUyUokWlfVenqoFGFChFOTSvRL6SbkmhXMDMbC-c-lz_VR0QL0J19vnRZnndQvYF2XKwYgYJt9E7i96ACL9E3RS64lII1rEhWTYpYCMbpg2VONqjjb0rwbIQvlO-9dm3N64bUI4Ct-rB2ie2_hzO-t2iPCMw_Q8klSi3E9hRw_LLIqKqmh6jjFUUsuAf3LRpuBn5glIu864OG2IfYATmVtYBIJd7GqOYHsC0X1h-kPppdvZT5O7K9QnEMXUnawfPVHfK6ndMA1Vsq7c7f-c5i_nwhFgk2HG4iiWQf8RTCCEMEnmxLEJmCPj5iVvG-b-32m0F7BBNn8GYNcGxWXqmiVy6UicaGm5QwDCiwDtV_RGNWCqgm39HYxf5V4V-1fp4Whh7zUs4YMP7ivRw47QhooldUO5aVn45wiiWdNJsuHRsB9j08FHIIPgja1bFQU-DrOnO_GWChYdxB-0OaE02GgBE073f7CC4vpLiLZ-at187lvZeMCqVTmXhu4xEw5Jud50VZsmKNoXo8fbDHUtfTA2kyk6EHFntCnfL8g7g96mgFKtWtZsD6OaK66zDCuKAXSCN9nDzE1DYeSNYo2MXexpLPuHTzpZFD7MZEfRq2v2RVCqXz2pJcxnmU8795u1gCmfnOJLuJv1RIbWzp635Hb1vTYRwKiJkEG-IOVuHWkS4DmKcmsfDK2DqR2NpftHueO-skT-wi0D5RetSo9LLPrNE3Y4WvnUIktR-feyoVie0RWmc1MQOcIlFv4ZEn4gDlcFVDlSKLv1XdMMOcVW_KhBxFnk6hlpUe9C2IWFw59qwRQA8FyTJ1p5zNDgwc4XricBF0=w968-h968-s-no-gm?authuser=0)
 
 
 
-I love you , nephew and I look forward to the next time we can be together.  I'll have an Extra Special Birthday Hug® in store for you.  Keep practicing at Mario Kart.  I hope you can beat me the next time we play.
+I love you, nephew, and I look forward to the next time we can be together.  I'll have an Extra Special Birthday Hug® in store for you.  Keep practicing at Mario Kart.  I hope you can beat me the next time we play.
 
 ## Special Message from Finley
 
