adds Adelina's card, some assests, adds some categories

--- a/_posts/2024-05-30-chiara-2024.md
+++ b/_posts/2024-05-30-chiara-2024.md
@@ -2,7 +2,7 @@
 layout: default
 title:  "Happy 12th Birthday, Chiara"
 date:   2024-05-29 21:15:00 -0700
-categories: chiara birthday
+categories: chiara birthday 2024
 ---
 # Happy Birthday Chiara!
 
