--- a/_posts/2024-06-24-caleb-2024.md
+++ b/_posts/2024-06-24-caleb-2024.md
@@ -2,7 +2,7 @@
 layout: default
 title:  "Happy 9th Birthday, Caleb"
 date:   2024-06-24 22:47:00 -0700
-categories: caleb birthday
+categories: caleb birthday 2024
 ---
 
 # Happy 9th Birthday!
