commit Caleb and Chiara's assets as well

--- a/_posts/2024-05-30-chiara-2024.md
+++ b/_posts/2024-05-30-chiara-2024.md
@@ -2,6 +2,7 @@
 layout: default
 title:  "Happy 12th Birthday, Chiara"
 date:   2024-05-29 21:15:00 -0700
+typora-root-url: "../"
 categories: chiara birthday 2024
 ---
 # Happy Birthday Chiara!
@@ -25,7 +26,7 @@ so they just ate pasta marinara.
 
 You probably don't remember, because it has been like a hundred years since we saw each other, but I actually have amazing drawing skills.  See, here is your amazing card
 
-![](https://lh3.googleusercontent.com/pw/AP1GczMew36bc2thwSexcQ6KvJ-1p04Nb9nw8DojJ7PMZxMWbcp6kuab6vt11yCweR7StRJyhgujBpSv5o8VzDq8J7SKrkRHbdm6Rd9TdkGBKtSg95Pml5qvYWAVAyicB_KA4YPCpsFuuYvCaOlEzK_nTDGLqA=w1291-h968-s-no-gm?authuser=0)
+![](/../../../assets/2024-05-30-chiara-2024/card.png)
 
 
 
@@ -33,7 +34,7 @@ You probably don't remember, because it has been like a hundred years since we s
 
 Finley also wanted to wish you a happy birthday.  He just turned seven years old.  Here he is with his friend Ginger.  As you can see, his hair is sticking out of her mouth.
 
-![](https://lh3.googleusercontent.com/pw/AP1GczNT0yorxUr0JicqNyScEX56Ij_aR4gGSVXABoFTWpVMrtMokSV25LtUNss8G88dao-ZULmbZe5C5dt_c4Hoz3OU4tperFDNknUeOrz4Ncd_PcdEFnOHOs0-N1gOjra1z1qWucV1CbjYpUqRB9ecSL3dog=w732-h968-s-no-gm?authuser=0)
+![](/../../../assets/2024-05-30-chiara-2024/finley_and_ginger.jpeg)
 
 
 
