--- a/_posts/2024-06-24-caleb-2024.md
+++ b/_posts/2024-06-24-caleb-2024.md
@@ -2,6 +2,7 @@
 layout: default
 title:  "Happy 9th Birthday, Caleb"
 date:   2024-06-24 22:47:00 -0700
+typora-root-url: "../"
 categories: caleb birthday 2024
 ---
 
@@ -11,7 +12,7 @@ categories: caleb birthday 2024
 
 
 
-![](https://images2.imgbox.com/29/e7/BnWa4BW2_o.png)
+![](/../../../assets/2024-06-24-caleb-2024/card.png)
 
 
 
@@ -19,7 +20,7 @@ categories: caleb birthday 2024
 
 Dear Caleb, I'm wishing you the most happiest of birthdays from over here in California.  I hope you have a really fun day filled with lots of smiles and laughs.  Tell your mom, dad, and siblings (and maybe grandparents) that I said they have to make a silly face for you.  Here's mine:
 
-![](https://images2.imgbox.com/db/34/KHUOdNtC_o.jpg)
+![](/../../../assets/2024-06-24-caleb-2024/silly_face.jpg)
 
 
 
