--- a/_posts/2024-06-30-adelina-2024.md
+++ b/_posts/2024-06-30-adelina-2024.md
@@ -51,3 +51,17 @@ I decided to ask Aunt Tracey to take a picture of me sharing a sugar snap pea wi
 
 
 Your mom told me that Caleb asked for everyone to give him a silly face after I mentioned that in my card.  I think for you, tell everyone that I said that have to do a special high-five with you.  Maybe its a "behind the back" or maybe its "two fist bumps and a clap explosion."  
+
+
+
+## Without Further Ado...
+
+Your Birthday Card
+
+![IMG_0157](/../../../assets/2024-06-30-adelina-2024/IMG_0157.PNG)
+
+
+
+And of course the "behind the scenes"
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FoxSg6I39VI?si=NOsBQvArhCBd7nbp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
