modify the reference if you modify the file, genius

--- a/_posts/2024-06-30-adelina-2024.md
+++ b/_posts/2024-06-30-adelina-2024.md
@@ -58,7 +58,7 @@ Your mom told me that Caleb asked for everyone to give him a silly face after I 
 
 Your Birthday Card
 
-![IMG_0157](/../../../assets/2024-06-30-adelina-2024/IMG_0157.PNG)
+![IMG_0157](/../../../assets/2024-06-30-adelina-2024/card.png)
 
 
 
