--- a/_posts/2024-07-24-gabriel-2024.md
+++ b/_posts/2024-07-24-gabriel-2024.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title:  "Happy 14th Birthday, Birthday"
+title:  "Happy 14th Birthday, Gabriel"
 date:   2024-07-24 09:00:00 -0700
 typora-root-url: "../"
 categories: gabriel birthday 2024
