formats poem for readibility

--- a/_posts/2024-07-24-gabriel-2024.md
+++ b/_posts/2024-07-24-gabriel-2024.md
@@ -22,76 +22,76 @@ I decided to try out some features of my art program.  Since you can draw so muc
 
 # A poem
 
-Once upon time, there was a nice lad.
+Once upon time, there was a nice lad.\
 He had a brother, two sisters, a mom, and a dad.
 
-He could draw awesome dragons and write about them, too.
+He could draw awesome dragons and write about them, too.\
 There were so many cool things that this kid could do.
 
-Then one day as he was strolling along,
+Then one day as he was strolling along,\
 He felt the beating of wings, so fierce and so strong.
 
-A water dragon landed, he feared an attack!
+A water dragon landed, he feared an attack!\
 "Sup bro," said the dragon, "please hop on my back."
 
-And so he climbed on and held his scales tight,
+And so he climbed on and held his scales tight,\
 Then they flew up and right out of sight.
 
-"I need your help," said the dragon, as they soared through the sky
+"I need your help," said the dragon, as they soared through the sky\
 "I don't know if I can, but I guess I can try."
 
-Soon they landed on an island that was quite deserted.
+Soon they landed on an island that was quite deserted.\
 "That was totally awesome!" the young lad then blurted.
 
-"The problem, said the dragon is that we're getting old.
+"The problem, said the dragon is that we're getting old.\
 There's lesson than a dozen of us now, all told."
 
-"What can I do?" The boy wondered aloud.
+"What can I do?" The boy wondered aloud.\
 "Please share the art skills with which you've been endowed"
 
-The dragon motioned towards a table by the mouth of his cave
+The dragon motioned towards a table by the mouth of his cave\
 Our boy walked right up being helpful and brave.
 
-On the table were markers and papers and pencils
+On the table were markers and papers and pencils\
 There were really all sorts of drawing utensils.
 
-"Please draw a new dragon for us" the scaly one said.
+"Please draw a new dragon for us" the scaly one said.\
 So the lad picked up a pencil and went right ahead.
 
-Soon he was done with his brand new creation,
+Soon he was done with his brand new creation,\
 the dragon then gasped with a puff of elation.
 
-He took the page from the boy and flew up to a peak
+He took the page from the boy and flew up to a peak\
 then the ground started to rumble, then next came a shriek.
 
-He then just couldn't believe his eyes,
+He then just couldn't believe his eyes,\
 As his creation began to materialize.
 
-Then both dragons landed, the old, and the new.
+Then both dragons landed, the old, and the new.\
 "Thank you so much, want to do another few?"
 
-Soon many new dragons were flying around,
+Soon many new dragons were flying around,\
 and they all made their way to the boy on the ground
 
-"You've added a special part to our magic,
+"You've added a special part to our magic,\
 your imagination has quite done the trick"
 
-"We'd best get you home so you don't get in trouble,
+"We'd best get you home so you don't get in trouble,\
 the boy hopped on his back and they went off on the double"
 
-"I don't know how we can thank you" he said as he landed.
+"I don't know how we can thank you" he said as he landed.\
 "I don't need a thing" the young boy remanded.
 
-"Well please accept this" and produced some gold,
+"Well please accept this" and produced some gold,\
 It was quite a large bar for the boy to behold.
 
-"Well all right" said the lad with a shrug,
+"Well all right" said the lad with a shrug,\
 "But, I don't really need it, I'll just take a hug"
 
-So they had a nice hug and then after a while,
+So they had a nice hug and then after a while,\
 the dragon stepped back and gave a quick smile.
 
-"Are you sure there's nothing I can give you, then?"
+"Are you sure there's nothing I can give you, then?"\
 "Maybe we can just go flying again?"
 
 # :feet: A message from Finley :feet:
