proofreading...what a concept

--- a/_posts/2024-07-24-gabriel-2024.md
+++ b/_posts/2024-07-24-gabriel-2024.md
@@ -26,16 +26,16 @@ Once upon time, there was a nice lad.\
 He had a brother, two sisters, a mom, and a dad.
 
 He could draw awesome dragons and write about them, too.\
-There were so many cool things that this kid could do.
+There were so many cool things that this guy could do.
 
 Then one day as he was strolling along,\
-He felt the beating of wings, so fierce and so strong.
+He felt the beating of wings, so fierce and quite strong.
 
 A water dragon landed, he feared an attack!\
 "Sup bro," said the dragon, "please hop on my back."
 
-And so he climbed on and held his scales tight,\
-Then they flew up and right out of sight.
+And so he climbed on and held its scales tight,\
+Then, they flew up and right out of sight.
 
 "I need your help," said the dragon, as they soared through the sky\
 "I don't know if I can, but I guess I can try."
@@ -43,8 +43,8 @@ Then they flew up and right out of sight.
 Soon they landed on an island that was quite deserted.\
 "That was totally awesome!" the young lad then blurted.
 
-"The problem, said the dragon is that we're getting old.\
-There's lesson than a dozen of us now, all told."
+"The problem, said the dragon "is that we're getting old.\
+There's less than a dozen of us now, all told."
 
 "What can I do?" The boy wondered aloud.\
 "Please share the art skills with which you've been endowed"
